get boilerplate code compiling

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -14,18 +14,21 @@ include(${PICO_SDK_PATH}/pico_sdk_init.cmake)
 # Use modern conventions like std::invoke
 set(CMAKE_CXX_STANDARD 17)
 
-project(harp_c_app_example)
+project(valve-controller)
 
 pico_sdk_init()
 add_subdirectory(lib/harp.core.rp2040/firmware) # Path to harp.core.rp2040.
 
+
 add_executable(${PROJECT_NAME}
     src/main.cpp
+    src/valve_controller_app.cpp
 )
 
 include_directories(inc)
 
-target_link_libraries(${PROJECT_NAME} harp_c_app harp_sync pico_stdlib)
+target_link_libraries(${PROJECT_NAME} harp_core harp_c_app
+                      harp_sync pico_stdlib)
 
 pico_add_extra_outputs(${PROJECT_NAME})
 
