--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -8,32 +8,17 @@ add_definitions(-DGIT_HASH="${COMMIT_ID}") # Usable in source code.
 add_definitions(-DUSBD_MANUFACTURER="Allen Institute")
 add_definitions(-DUSBD_PRODUCT="valve-controller")
 
-if (DEFINED PICO_SDK_PATH)
-    message("Using explicitly defined PICO_SDK_PATH.")
-elseif (DEFINED ENV{PICO_SDK_PATH} AND NOT DEFINED PICO_SDK_PATH)
-    set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
-    message("Using environment variable PICO_SDK_PATH.")
-else()
-    message(SEND_ERROR "PICO_SDK_PATH is not defined either as an environment "
-"variable or explicitly via 'cmake -DPICO_SDK_PATH=<path to pico sdk> ..'")
-endif()
+# PICO_SDK_PATH must be defined.
 include(${PICO_SDK_PATH}/pico_sdk_init.cmake)
 
 # Use modern conventions like std::invoke
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 17)
 
 project(valve-controller)
 
 pico_sdk_init()
 add_subdirectory(lib/harp.core.rp2040/firmware) # Path to harp.core.rp2040.
 
-add_library(valve_driver
-    src/valve_driver.cpp
-)
-
-add_library(pwm
-    src/pwm.cpp
-)
 
 add_executable(${PROJECT_NAME}
     src/main.cpp
@@ -42,11 +27,7 @@ add_executable(${PROJECT_NAME}
 
 include_directories(inc)
 
-target_link_libraries(pwm
-                      hardware_pwm pico_stdlib)
-target_link_libraries(valve_driver
-                      pwm hardware_pwm pico_stdlib)
-target_link_libraries(${PROJECT_NAME} harp_core harp_c_app valve_driver
+target_link_libraries(${PROJECT_NAME} harp_core harp_c_app
                       harp_sync pico_stdlib)
 
 pico_add_extra_outputs(${PROJECT_NAME})
