tease pwm class into its own repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "firmware/lib/harp.core.rp2040"]
 	path = firmware/lib/harp.core.rp2040
 	url = git@github.com:AllenNeuralDynamics/harp.core.rp2040.git
+[submodule "firmware/lib/rp2040.pwm"]
+	path = firmware/lib/rp2040.pwm
+	url = git@github.com:AllenNeuralDynamics/rp2040.pwm.git
